Bug 104096 - zimbraMtaDnsLookupsEnabled is deprecated, update console Localized strings.
[Manual Test]
1/ Set the admin user's language to any languages other than English.  I tested in Japanese.
2/ Logged in to the admin console
3/ Went to "Configure" -> "Server" -> "MTA"
4/ Verified that the item labels in the pull-down menu of the "SMTP DNS" field in the Network category are all localized.
5/ Went to "Configure" -> "Global" -> "MTA" 
6/ Verified that the item labels for the "SMTP DNS" are all localized.

https://bugzilla.zimbra.com/show_bug.cgi?id=104096

Copied from Perforce
 Change: 567552

--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -897,6 +897,10 @@ NAD_MTA_RelayPort = Relay-MTA-Port:
 NAD_MTA_MaxMsgSize = Maximale Mailgr\u00f6\u00dfe (KB):
 NAD_DOC_MaxUploadSize = Maximale Gr\u00f6\u00dfe einer Datei die vom Desktop hochgeladen werden kann (KB):
 NAD_MTA_Options = Optionen:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Aktiviert
+NAD_MTA_SMTP_Dns_Disabled = Deaktiviert
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS-Lookups aktivieren
 NAD_MTA_ProtocolChecks = Protokollpr\u00fcfung
 NAD_MTA_reject_invalid_helo_hostname = Hostname in der Begr\u00fc\u00dfung verst\u00f6\u00dft gegen RFC-Regeln (reject_invalid_helo_hostname)
