--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -901,6 +901,10 @@ NAD_MTA_RelayPort = Puerto MTA de retransmisi\u00f3n:
 NAD_MTA_MaxMsgSize = Tama\u00f1o m\u00e1ximo del mensaje (KB):
 NAD_DOC_MaxUploadSize = Tama\u00f1o m\u00e1ximo de un archivo cargado desde el escritorio (KB):
 NAD_MTA_Options = Opciones:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Activado
+NAD_MTA_SMTP_Dns_Disabled = Desactivado
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Activar consultas de DNS
 NAD_MTA_ProtocolChecks = Comprobaciones de protocolo
 NAD_MTA_reject_invalid_helo_hostname = El nombre del servidor en el inicio de la comunicaci\u00f3n infringe RFC (reject_invalid_helo_hostname)
