--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -910,6 +910,10 @@ NAD_MTA_RelayPort = Birtransmisioko MTA ataka:
 NAD_MTA_MaxMsgSize = Mezuaren gehienezko tamaina (kb):
 NAD_DOC_MaxUploadSize = Mahaigaineko ordenagailutik igotako fitxategi baten gehienezko tamaina (KB):
 NAD_MTA_Options = Aukerak:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Aktibatuta
+NAD_MTA_SMTP_Dns_Disabled = Desaktibatua
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Aktibatu DNSko kontsultak
 NAD_MTA_ProtocolChecks = Protokolo-egiaztapenak
 NAD_MTA_reject_invalid_helo_hostname = Komunikazioaren hasieran zerbitzariaren izenak RFCa (reject_invalid_hostname) urratzen du
