--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = Tov\u00e1bb\u00edt\u00e1si MTA portja:
 NAD_MTA_MaxMsgSize = Legnagyobb \u00fczenetm\u00e9ret (KB):
 NAD_DOC_MaxUploadSize = Az Asztalr\u00f3l felt\u00f6lt\u00f6tt f\u00e1jl maxim\u00e1lis m\u00e9rete (kB):
 NAD_MTA_Options = Be\u00e1ll\u00edt\u00e1sok:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Enged\u00e9lyezve
+NAD_MTA_SMTP_Dns_Disabled = Letiltva
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS-c\u00edmkeres\u00e9sek enged\u00e9lyez\u00e9se
 NAD_MTA_ProtocolChecks = Protokoll-ellen\u0151rz\u00e9sek
 NAD_MTA_reject_invalid_helo_hostname = Az \u00fcdv\u00f6zl\u00e9sben l\u00e9v\u0151 \u00e1llom\u00e1sn\u00e9v nem felel meg az RFC szab\u00e1lyainak (reject_invalid_helo_hostname)
