--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -917,6 +917,10 @@ NAD_MTA_RelayPort = Port MTA relai:
 NAD_MTA_MaxMsgSize = Ukuran pesan maksimal (KB):
 NAD_DOC_MaxUploadSize = Ukuran maksimal file yang diunggah dari desktop (KB):
 NAD_MTA_Options = Opsi:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Diaktifkan
+NAD_MTA_SMTP_Dns_Disabled = Dinonaktifkan
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Aktifkan lookup DNS
 NAD_MTA_ProtocolChecks = Pemeriksaan protokol
 NAD_MTA_reject_invalid_helo_hostname = Nama host pada sapaan melanggar RFC (reject_invalid_helo_hostname)
