--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = Porta MTA di inoltro:
 NAD_MTA_MaxMsgSize = Dimensioni massime messaggio (KB):
 NAD_DOC_MaxUploadSize = Dimensioni massime di un file caricato dal desktop (KB):
 NAD_MTA_Options = Opzioni:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Attivo
+NAD_MTA_SMTP_Dns_Disabled = Disattivato
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Attiva lookup DNS
 NAD_MTA_ProtocolChecks = Controlli protocollo
 NAD_MTA_reject_invalid_helo_hostname = Il nome host nella presentazione v\u00ecola l'RFC (reject_invalid_helo_hostname)
