--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = \u05d9\u05e6\u05d9\u05d0\u05d4 \u05e9\u05dc MTA \u05de\u05de
 NAD_MTA_MaxMsgSize = \u05d2\u05d5\u05d3\u05dc \u05d4\u05d5\u05d3\u05e2\u05d4 \u05de\u05e8\u05d1\u05d9 (KB)\u200f:
 NAD_DOC_MaxUploadSize = \u05d2\u05d5\u05d3\u05dc \u05de\u05e8\u05d1\u05d9 \u05e9\u05dc \u05e7\u05d5\u05d1\u05e5 \u05e9\u05d4\u05d5\u05e2\u05dc\u05d4 \u05de\u05e9\u05d5\u05dc\u05d7\u05df \u05d4\u05e2\u05d1\u05d5\u05d3\u05d4 (KB)\u200f:
 NAD_MTA_Options = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u05de\u05d5\u05e4\u05e2\u05dc
+NAD_MTA_SMTP_Dns_Disabled = \u05de\u05d5\u05e9\u05d1\u05ea
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u05d4\u05e4\u05e2\u05dc \u05d7\u05d9\u05e4\u05d5\u05e9\u05d9 DNS\u200f
 NAD_MTA_ProtocolChecks = \u05d1\u05d3\u05d9\u05e7\u05d5\u05ea \u05e4\u05e8\u05d5\u05d8\u05d5\u05e7\u05d5\u05dc
 NAD_MTA_reject_invalid_helo_hostname = \u05e9\u05dd \u05de\u05d0\u05e8\u05d7 \u05d1\u05d1\u05e8\u05db\u05d4 \u05de\u05e4\u05e8 \u05d0\u05ea \u05d4-RFC (reject_invalid_helo_hostname)\u200e\u200f
