--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -896,6 +896,10 @@ NAD_MTA_RelayPort = \ub9b4\ub808\uc774 MTA \ud3ec\ud2b8:
 NAD_MTA_MaxMsgSize = \ucd5c\ub300 \uba54\uc2dc\uc9c0 \ud06c\uae30(KB):
 NAD_DOC_MaxUploadSize = \ub370\uc2a4\ud06c\ud1b1\uc5d0\uc11c \uc5c5\ub85c\ub4dc\ub418\ub294 \ud30c\uc77c\uc758 \ucd5c\ub300 \ud06c\uae30(KB):
 NAD_MTA_Options = \uc635\uc158:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \uc0ac\uc6a9
+NAD_MTA_SMTP_Dns_Disabled = \uc0ac\uc6a9 \uc548 \ud568
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS \uc870\ud68c \uc0ac\uc6a9
 NAD_MTA_ProtocolChecks = \ud504\ub85c\ud1a0\ucf5c \uac80\uc0ac
 NAD_MTA_reject_invalid_helo_hostname = \uc778\uc0ac\ub9d0\uc5d0 \uc788\ub294 \ud638\uc2a4\ud2b8 \uc774\ub984\uc774 RFC\ub97c \uc704\ubc18\ud569\ub2c8\ub2e4(reject_invalid_helo_hostname).
