--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = \u0e9b\u0ec8\u0ead\u0e87\u200b\u0e96\u0ec8\u0eb2\u0e8d\u200b
 NAD_MTA_MaxMsgSize = \u0e82\u0eb0\u0edc\u0eb2\u0e94\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb9\u0e87\u200b\u0eaa\u0eb8\u0e94 (KB):
 NAD_DOC_MaxUploadSize = \u0e82\u0eb0\u0edc\u0eb2\u0e94\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u0ead\u0eb1\u0e9a\u200b\u0ec2\u0eab\u0ea5\u200b\u0e94\u200b\u0eaa\u0eb9\u0e87\u200b\u0eaa\u0eb8\u0e94\u200b\u0e88\u0eb2\u0e81\u200b\u0e84\u0ead\u0ea1\u200b\u0e9e\u0eb4\u0ea7\u200b\u0ec0\u0e95\u0eb5 (KB):
 NAD_MTA_Options = \u0e97\u0eb2\u0e87\u0ec0\u0ea5\u0eb7\u0ead\u0e81:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0ec1\u0ea5\u0ec9\u0ea7
+NAD_MTA_SMTP_Dns_Disabled = \u0e9a\u0ecd\u0ec8\u0ec0\u0eae\u0eb1\u0e94\u0ec3\u0eab\u0ec9\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0eae\u0eb1\u0e94\u0ea7\u0ebd\u0e81\u0ec4\u0e94\u0ec9
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e87\u0eb2\u0e99\u200b\u0e81\u0eb2\u0e99\u200b\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2 DNS
 NAD_MTA_ProtocolChecks = \u0e81\u0ea7\u0e94\u200b\u0ec0\u0e8a\u0eb1\u0e81\u0ec2\u0e9b\u0ebc\u0ec2\u0e95\u0ec2\u0e84\u0ea5
 NAD_MTA_reject_invalid_helo_hostname = \u0e8a\u0eb7\u0ec8\u200b\u0ec1\u0ea1\u0ec8\u0e82\u0ec8\u0eb2\u0e8d\u200b\u0ea5\u0eb0\u200b\u0ec0\u0ea1\u0eb5\u0e94\u200b\u0e84\u0eb3\u0e97\u0eb1\u0e81\u200b\u0e97\u0eb2\u0e8d RFC (reject_invalid_helo_hostname)
