--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = Port MTA geganti:
 NAD_MTA_MaxMsgSize = Saiz mesej maksimum (KB):
 NAD_DOC_MaxUploadSize = Saiz maksimum fail yang dimuat naik dari desktop (KB):
 NAD_MTA_Options = Opsyen:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Didayakan
+NAD_MTA_SMTP_Dns_Disabled = Dinyahdayakan
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Dayakan pencarian DNS
 NAD_MTA_ProtocolChecks = Semakan protokol
 NAD_MTA_reject_invalid_helo_hostname = Nama hos dalam sapaan melanggar RFC (reject_invalid_helo_hostname)
