--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -908,6 +908,10 @@ NAD_MTA_RelayPort = Port MTA:
 NAD_MTA_MaxMsgSize = Maksymalny rozmiar wiadomo\u015bci (KB):
 NAD_DOC_MaxUploadSize = Maksymalny rozmiar pliku przes\u0142anego z\u00a0komputera (KB):
 NAD_MTA_Options = Ustawienia:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = W\u0142\u0105czona
+NAD_MTA_SMTP_Dns_Disabled = Wy\u0142\u0105czone
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = W\u0142\u0105cz wyszukiwanie DNS
 NAD_MTA_ProtocolChecks = Kontrole protoko\u0142u
 NAD_MTA_reject_invalid_helo_hostname = Nazwa serwera przy powitaniu narusza RFC (reject_invalid_helo_hostname)
