--- a/WebRoot/messages/ZaMsg_pt_PT.properties
+++ b/WebRoot/messages/ZaMsg_pt_PT.properties
@@ -811,6 +811,10 @@ NAD_MTA_RelayPort = Porta do MTA de transfer\u00eancia:
 NAD_MTA_MaxMsgSize = Tamanho m\u00e1ximo da mensagem (KB):
 NAD_DOC_MaxUploadSize = Tamanho m\u00e1ximo de um ficheiro carregado para o Porta-ficheiros, as Mensagens de e-mail, os compromissos da Agenda e as Tarefas (KB):
 NAD_MTA_Options = Op\u00e7\u00f5es:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Ativado
+NAD_MTA_SMTP_Dns_Disabled = Desativado
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Ativar consultas ao DNS
 NAD_MTA_ProtocolChecks = Verifica\u00e7\u00f5es do protocolo
 NAD_MTA_reject_invalid_helo_hostname = O par\u00e2metro hostname na sauda\u00e7\u00e3o viola a RFC (reject_invalid_helo_hostname)
