--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = Port MTA-releu:
 NAD_MTA_MaxMsgSize = Dimensiunea maxim\u0103 a mesajului (KB):
 NAD_DOC_MaxUploadSize = Dimensiunea maxim\u0103 a unui fi\u015fier \u00eenc\u0103rcat de pe desktop (KB):
 NAD_MTA_Options = Op\u0163iuni:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Activat
+NAD_MTA_SMTP_Dns_Disabled = Dezactivat
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Activare c\u0103ut\u0103ri DNS
 NAD_MTA_ProtocolChecks = Verific\u0103ri de protocol
 NAD_MTA_reject_invalid_helo_hostname = Numele gazdei din salut \u00eencalc\u0103 RFC (reject_invalid_helo_hostname)
