--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -915,6 +915,10 @@ NAD_MTA_RelayPort = Vrata posredovalnega MTA:
 NAD_MTA_MaxMsgSize = Najve\u010dja velikost sporo\u010dila (KB):
 NAD_DOC_MaxUploadSize = Najve\u010dja velikost datoteke, prenesene z namizja (KB):
 NAD_MTA_Options = Mo\u017enosti:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Omogo\u010deno
+NAD_MTA_SMTP_Dns_Disabled = Onemogo\u010deno
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Omogo\u010di DNS iskanja
 NAD_MTA_ProtocolChecks = Preverjanja protokola
 NAD_MTA_reject_invalid_helo_hostname = Ime gostitelja v pozdravu kr\u0161i RFC (reject_invalid_helo_hostname)
