--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = Port f\u00f6r relay-MTA:
 NAD_MTA_MaxMsgSize = Maximal meddelandestorlek (kB):
 NAD_DOC_MaxUploadSize = Maximal storlek p\u00e5 en fil som \u00f6verf\u00f6rs fr\u00e5n skrivbordet (kB):
 NAD_MTA_Options = Alternativ:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Aktiverat
+NAD_MTA_SMTP_Dns_Disabled = Inaktiverat
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Aktivera DNS-s\u00f6kningar
 NAD_MTA_ProtocolChecks = Protokollkontroller
 NAD_MTA_reject_invalid_helo_hostname = V\u00e4rdnamnet i h\u00e4lsningen bryter mot RFC (reject_invalid_helo_hostname)
