--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -913,6 +913,10 @@ NAD_MTA_RelayPort = Aktar\u0131c\u0131 MTA ba\u011flant\u0131 noktas\u0131:
 NAD_MTA_MaxMsgSize = Mesaj b\u00fcy\u00fckl\u00fc\u011f\u00fc \u00fcst s\u0131n\u0131r\u0131 (KB):
 NAD_DOC_MaxUploadSize = Masa\u00fcst\u00fcnden y\u00fcklenen bir dosya i\u00e7in boyut \u00fcst s\u0131n\u0131r\u0131 (KB):
 NAD_MTA_Options = Se\u00e7enekler:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Etkinle\u015ftirildi
+NAD_MTA_SMTP_Dns_Disabled = Devre d\u0131\u015f\u0131
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS aramalar\u0131n\u0131 etkinle\u015ftir
 NAD_MTA_ProtocolChecks = Protokol denetimleri
 NAD_MTA_reject_invalid_helo_hostname = Kar\u015f\u0131lamadaki anasistem ad\u0131 RFC'yi ihlal ediyor (reject_invalid_helo_hostname)
