--- a/WebRoot/messages/ZaMsg_uk.properties
+++ b/WebRoot/messages/ZaMsg_uk.properties
@@ -913,6 +913,10 @@ NAD_MTA_RelayPort = \u041f\u043e\u0440\u0442 MTA \u0440\u0435\u0442\u0440\u0430\
 NAD_MTA_MaxMsgSize = \u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0438\u0439 \u0440\u043e\u0437\u043c\u0456\u0440 \u043f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f (\u041a\u0431\u0430\u0439\u0442):
 NAD_DOC_MaxUploadSize = \u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0438\u0439 \u0440\u043e\u0437\u043c\u0456\u0440 \u0444\u0430\u0439\u043b\u0443, \u043f\u0435\u0440\u0435\u0434\u0430\u043d\u043e\u0433\u043e \u0437 \u043d\u0430\u0441\u0442\u0456\u043b\u044c\u043d\u043e\u0433\u043e \u043a\u043e\u043c\u043f'\u044e\u0442\u0435\u0440\u0430 (\u041a\u0411):
 NAD_MTA_Options = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u0423\u0432\u0456\u043c\u043a\u043d\u0435\u043d\u043e
+NAD_MTA_SMTP_Dns_Disabled = \u0412\u0438\u043c\u043a\u043d\u0435\u043d\u043e
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u0423\u0432\u0456\u043c\u043a\u043d\u0443\u0442\u0438 \u043f\u0435\u0440\u0435\u0433\u043b\u044f\u0434 DNS
 NAD_MTA_ProtocolChecks = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0438 \u043f\u0440\u043e\u0442\u043e\u043a\u043e\u043b\u0443
 NAD_MTA_reject_invalid_helo_hostname = \u0406\u043c'\u044f \u0445\u043e\u0441\u0442\u0443 \u0443 \u043f\u0440\u0438\u0432\u0456\u0442\u0430\u043d\u043d\u0456 \u043f\u043e\u0440\u0443\u0448\u0443\u0454 RFC (reject_invalid_helo_hostname)
