--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -907,6 +907,10 @@ NAD_MTA_RelayPort = \u4e2d\u7ee7 MTA \u7aef\u53e3\uff1a
 NAD_MTA_MaxMsgSize = \u90ae\u4ef6\u6700\u5927\u5927\u5c0f(KB):
 NAD_DOC_MaxUploadSize = \u4ece\u684c\u9762\u4e0a\u4f20\u7684\u6700\u5927\u6587\u4ef6\u5927\u5c0f (KB)\uff1a
 NAD_MTA_Options = \u9009\u9879\uff1a
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u5df2\u542f\u7528
+NAD_MTA_SMTP_Dns_Disabled = \u5df2\u505c\u7528
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u542f\u7528 DNS \u67e5\u8be2\uff1a
 NAD_MTA_ProtocolChecks = \u534f\u8bae\u68c0\u67e5
 NAD_MTA_reject_invalid_helo_hostname = \u663e\u793a\u7684\u4e3b\u673a\u540d\u8fdd\u53cd\u4e86 RFC (reject_invalid_helo_hostname)
