--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -914,6 +914,10 @@ NAD_MTA_RelayPort = \u8f49\u9001 MTA \u901a\u8a0a\u57e0:
 NAD_MTA_MaxMsgSize = \u90f5\u4ef6\u5927\u5c0f\u4e0a\u9650(KB):
 NAD_DOC_MaxUploadSize = \u5f9e\u684c\u9762\u4e0a\u50b3\u7684\u6700\u5927\u6a94\u6848\u5927\u5c0f (KB)\uff1a
 NAD_MTA_Options = \u9078\u9805:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u5df2\u555f\u7528
+NAD_MTA_SMTP_Dns_Disabled = \u5df2\u505c\u7528
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u555f\u7528 DNS \u67e5\u8a62:
 NAD_MTA_ProtocolChecks = \u901a\u8a0a\u5354\u5b9a\u6aa2\u67e5
 NAD_MTA_reject_invalid_helo_hostname = \u63a5\u53d7\u7684\u4e3b\u6a5f\u540d\u7a31\u9055\u53cd RFC (reject_invalid_helo_hostname)
