--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = Rel\u00e6-MTA-port:
 NAD_MTA_MaxMsgSize = Maksimal meddelelsesst\u00f8rrelse (KB):
 NAD_DOC_MaxUploadSize = Maksimal st\u00f8rrelse p\u00e5 en fil uploadet fra skrivebordet (KB):
 NAD_MTA_Options = Indstillinger:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Aktiveret
+NAD_MTA_SMTP_Dns_Disabled = Deaktiveret
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Aktiv\u00e9r DNS-opslag
 NAD_MTA_ProtocolChecks = Protokoleftersyn
 NAD_MTA_reject_invalid_helo_hostname = V\u00e6rtsnavn i hilsen er i strid med RFC (reject_invalid_helo_hostname)
