--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -904,6 +904,10 @@ NAD_MTA_RelayPort = Port du relais SMTP\u00a0:
 NAD_MTA_MaxMsgSize = Taille maximale du message \u00e9lectronique (Ko)\u00a0:
 NAD_DOC_MaxUploadSize = Taille maximum (en ko) d\u2019un fichier upload\u00e9 \u00e0 partir du Bureau Zimbra :
 NAD_MTA_Options = Options\u00a0:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Activ\u00e9
+NAD_MTA_SMTP_Dns_Disabled = D\u00e9sactiv\u00e9
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = Activer la v\u00e9rification DNS\u00a0:
 NAD_MTA_ProtocolChecks = V\u00e9rifications du protocole
 NAD_MTA_reject_invalid_helo_hostname = Le nom d'h\u00f4te dans le message d'accueil ne respecte pas les RFC (reject_invalid_helo_hostname)
