--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = MTA \u092a\u094b\u0930\u094d\u091f \u0930\u0940\u0932\u0947 
 NAD_MTA_MaxMsgSize = \u0905\u0927\u093f\u0915\u0924\u092e \u0938\u0902\u0926\u0947\u0936 \u0906\u0915\u093e\u0930 (KB):
 NAD_DOC_MaxUploadSize = \u0921\u0947\u0938\u094d\u0915\u091f\u0949\u092a \u0938\u0947 \u0905\u092a\u0932\u094b\u0921 \u0915\u0940 \u091c\u093e\u0928\u0947 \u0935\u093e\u0932\u0940 \u0915\u093f\u0938\u0940 \u092b\u093c\u093e\u0907\u0932 \u0915\u093e \u0905\u0927\u093f\u0915\u0915\u092e \u0906\u0915\u093e\u0930 (KB):
 NAD_MTA_Options = \u0935\u093f\u0915\u0932\u094d\u092a:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u0938\u0915\u094d\u0937\u092e
+NAD_MTA_SMTP_Dns_Disabled = \u0905\u0915\u094d\u0937\u092e
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS \u0932\u0941\u0915\u0905\u092a \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
 NAD_MTA_ProtocolChecks = \u092a\u094d\u0930\u094b\u091f\u093e\u0915\u0949\u0932 \u091c\u093e\u0901\u091a \u0915\u0947 \u092c\u093f\u0902\u0926\u0941
 NAD_MTA_reject_invalid_helo_hostname = \u0905\u092d\u093f\u0935\u093e\u0926\u0928 \u092e\u0947\u0902 \u0939\u094b\u0938\u094d\u091f\u0928\u093e\u092e RFC \u0915\u093e \u0909\u0932\u094d\u0932\u0902\u0918\u0928 \u0915\u0930\u0924\u093e \u0939\u0948 (reject_invalid_helo_hostname)
