--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = Relay-MTA-poort:
 NAD_MTA_MaxMsgSize = Maximale berichtgrootte (kB):
 NAD_DOC_MaxUploadSize = Maximale grootte van een bestand dat vanaf de desktop wordt ge\u00fcpload (kB):
 NAD_MTA_Options = Opties:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = Ingeschakeld
+NAD_MTA_SMTP_Dns_Disabled = Uitgeschakeld
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = DNS-opzoeken inschakelen
 NAD_MTA_ProtocolChecks = Protocolcontroles
 NAD_MTA_reject_invalid_helo_hostname = Hostnaam in begroeting is in conflict met RFC (reject_invalid_helo_hostname)
