--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -913,6 +913,10 @@ NAD_MTA_RelayPort = \u0e1e\u0e2d\u0e23\u0e4c\u0e15 MTA \u0e23\u0e35\u0e40\u0e25\
 NAD_MTA_MaxMsgSize = \u0e02\u0e19\u0e32\u0e14\u0e2a\u0e39\u0e07\u0e2a\u0e38\u0e14\u0e02\u0e2d\u0e07\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21 (KB):
 NAD_DOC_MaxUploadSize = \u0e02\u0e19\u0e32\u0e14\u0e44\u0e1f\u0e25\u0e4c\u0e2a\u0e39\u0e07\u0e2a\u0e38\u0e14\u0e17\u0e35\u0e48\u0e2d\u0e31\u0e1e\u0e42\u0e2b\u0e25\u0e14\u0e08\u0e32\u0e01\u0e40\u0e14\u0e2a\u0e01\u0e4c\u0e17\u0e47\u0e2d\u0e1b (KB):
 NAD_MTA_Options = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01:
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
+NAD_MTA_SMTP_Dns_Disabled = \u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e41\u0e25\u0e49\u0e27
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e01\u0e32\u0e23\u0e04\u0e49\u0e19\u0e2b\u0e32 DNS
 NAD_MTA_ProtocolChecks = \u0e01\u0e32\u0e23\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e42\u0e1b\u0e23\u0e42\u0e15\u0e04\u0e2d\u0e25
 NAD_MTA_reject_invalid_helo_hostname = \u0e0a\u0e37\u0e48\u0e2d\u0e42\u0e2e\u0e2a\u0e15\u0e4c\u0e43\u0e19\u0e01\u0e32\u0e23\u0e17\u0e31\u0e01\u0e17\u0e32\u0e22\u0e25\u0e30\u0e40\u0e21\u0e34\u0e14 RFC (reject_invalid_helo_hostname)
