--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -888,6 +888,10 @@ NAD_MTA_RelayPort = \u4e2d\u7e7c MTA \u9023\u63a5\u57e0\uff1a
 NAD_MTA_MaxMsgSize = \u90f5\u4ef6\u5927\u5c0f\u4e0a\u9650 (KB)\uff1a
 NAD_DOC_MaxUploadSize = \u5f9e\u684c\u9762\u4e0a\u50b3\u4e4b\u6a94\u6848\u7684\u4e0a\u9650\u5927\u5c0f (KB)\ufe55
 NAD_MTA_Options = \u9078\u9805\ufe55
+NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns_Enabled = \u5df2\u555f\u7528
+NAD_MTA_SMTP_Dns_Disabled = \u5df2\u505c\u7528
+NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
 NAD_MTA_DnsLookups = \u555f\u7528 DNS \u67e5\u8a62\uff1a
 NAD_MTA_ProtocolChecks = \u901a\u8a0a\u5354\u5b9a\u6aa2\u67e5
 NAD_MTA_reject_invalid_helo_hostname = \u4f7f\u7528\u4e3b\u6a5f\u540d\u7a31\u70ba\u554f\u5019\u8a9e\u9055\u53cd RFC (reject_invalid_helo_hostname)
